--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static tailwind_tags %} {% block title %}
-<title>Destinations</title>
+Destinations
 {% endblock %} {% tailwind_css %}
 <link
   rel="stylesheet"
@@ -11,14 +11,16 @@
   href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"
 />
 {% block content %}
+
 <body class="bg-gray-100">
-  <div class="container mx-auto py-8">
-    <div
-      class="bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-6"
-    >
+
+  <div class="container mx-auto py-8 flex-col space-y-8">
+    <!-- <div
+      class="bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-6 "
+    > -->
       <!-- Product images -->
-      <div class="">
-        <div class="flex flex-wrap justify-center mb-6 border h-4/5">
+      <div class="flex justify-center bg-white p-6 rounded-lg shadow-md ">
+        <div class="flex justify-center items-center mb-6 border w-3">
           {% if product.image %}
           <img
             src="{{ product.image.url }}"
@@ -30,79 +32,109 @@
           {% endif %}
         </div>
       </div>
-      <div>
-        <!-- Product details -->
-        <div>
-          <p class="text-gray-700 mb-2">{{ product.description }}</p>
-          <p class="text-gray-700 mb-2">
-            Category: {{ product.category.title }}
-          </p>
-          <p class="text-gray-700 mb-2">Vendor: {{ product.vendor.title }}</p>
-          <!-- Additional product details can be added here -->
-        </div>
-        <!-- Check Availability section -->
-        <div class="flex flex-col justify-between mt-6 md:mt-0">
-          <form
-            action="{% url 'check_availability' product.pid %}"
-            method="POST"
-            onsubmit="return checkAvailability(this);"
-          >
-            {% csrf_token %}
-            <div class="mb-2">
-              <label
-                for="startDate"
-                class="block text-gray-700 text-sm font-bold mb-2"
-                >Check-in Date:</label
-              >
-              <input
-                type="date"
-                id="startDate"
-                name="startDate"
-                class="rounded-l-lg p-2 border border-gray-200 bg-white w-full"
-                required
-                onfocus="this.min=new Date().toISOString().split('T')[0]"
-              />
-            </div>
-            <div class="mb-4">
-              <label
-                for="num_guests"
-                class="block text-gray-700 text-sm font-bold mb-2"
-                >Guests:</label
-              >
-              <input
-                type="number"
-                id="num_guests"
-                name="num_guests"
-                class="p-2 border-t border-b border-r border-gray-200 bg-white w-full"
-                placeholder="Number of Guests"
-                required
-                min="1"
-              />
-            </div>
-            {% if not user.is_authenticated %}
-                <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-                    <strong class="font-bold">Warning!</strong>
-                    <span class="block sm:inline"> You must be logged in to check availability.</span>
-                </div>
-            {% endif %}
 
-            <button
-              type="submit"
-              class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-              class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-3"
-            >
-              Check Availability
-            </button>
-          </form>
-          <div class="mt-4 text-gray-700 text-sm">
-            <p>
-              Enter your check-in date and number of guests to check
-              availability.
-            </p>
+      <!-- Product details -->
+
+      <!-- Check Availability section -->
+  
+
+    <!-- </div> -->
+    <div class="flex space-x-5 justify-between ">
+      <div class="bg-gray-200 p-5 flex flex-col flex-1 space-y-5 rounded-md">
+        <h1 class = 'text-2xl'>Package Details</h1>
+        <p class="text-gray-700 mb-2">{{ product.description }}</p>
+        <div class = 'flex space-x-28 text-gray-600'>
+          <div>
+            <p>Category:</p>
+            <span>{{product.category.title}}</span>
           </div>
+          
+          <div>
+            <p>Vendor:</p>
+            <span>{{ product.user }}</span>
+          </div>
+          
+        </div>
+        <h2 class = 'text-xl font-semibold'>Price: Rs. 1</h2>
+        <div class = 'text-gray-600'>
+          <p style="text-decoration: line-through ;">Original Price: <span style="text-decoration: line-through;">{{ product.old_price }}</span></p>
+
+          <p class="text-red-500">Discount: <span>{{product.get_percentage}}%</span></p>
+        </div>
+
+      </div>
+      <!-- Check Availability -->
+      <div class="flex flex-col justify-between mt-6 md:mt-0 bg-white p-5 rounded-md bg-gray-200">
+        
+        <form
+          action="{% url 'check_availability' product.pid %}"
+          method="POST"
+          onsubmit="return checkAvailability(this);"
+        >
+          {% csrf_token %}
+          <div class = 'mb-3'>
+            <h2 class ='text-xl font-semibold'>Check Availability</h2>
+          </div>
+          <div class="mb-2">
+            <label
+              for="startDate"
+              class="block text-gray-700 text-sm font-bold mb-2"
+              >Check-in Date:</label
+            >
+            <input
+              type="date"
+              id="startDate"
+              name="startDate"
+              class="rounded-l-lg p-2 border border-gray-200 bg-white w-full"
+              required
+              onfocus="this.min=new Date().toISOString().split('T')[0]"
+            />
+          </div>
+          <div class="mb-4">
+            <label
+              for="num_guests"
+              class="block text-gray-700 text-sm font-bold mb-2"
+              >Guests:</label
+            >
+            <input
+              type="number"
+              id="num_guests"
+              name="num_guests"
+              class="p-2 border-t border-b border-r border-gray-200 bg-white w-full"
+              placeholder="Number of Guests"
+              required
+              min="1"
+            />
+          </div>
+          {% if not user.is_authenticated %}
+          <div
+            class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative"
+            role="alert"
+          >
+            <strong class="font-bold">Warning!</strong>
+            <span class="block sm:inline">
+              You must be logged in to check availability.</span
+            >
+          </div>
+          {% endif %}
+  
+          <button
+            type="submit"
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-3"
+          >
+            Check Availability
+          </button>
+        </form>
+        <div class="mt-4 text-gray-700 text-sm">
+          <p>
+            Enter your check-in date and number of guests to check availability.
+          </p>
         </div>
       </div>
     </div>
+
+    
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
