--- a/TravelBooking/theme/templates/contact.html
+++ b/TravelBooking/theme/templates/contact.html
@@ -14,9 +14,9 @@
 
 <div class="bg-gray-100 py-16">
     <div class="container mx-auto px-6">
-        <div class="max-w-4xl mx-auto flex items-center justify-between">
+        <div class="max-w-4xl mx-auto flex flex-col md:flex-row items-center justify-between">
             <!-- Organization Info -->
-            <div class="w-1/2 pr-8">
+            <div class="md:w-1/2 pr-8">
                 <div class="bg-white shadow-lg rounded-lg p-6">
                     <h2 class="text-3xl font-semibold mb-4">About Us</h2>
                     <p class="text-lg leading-relaxed mb-6">Welcome to Adven, your ultimate destination for unforgettable adventure experiences! At Adven, we believe that life is meant to be filled with thrilling adventures and breathtaking journeys. Whether you're a thrill-seeker, nature lover, or culture enthusiast, we've got the perfect adventure waiting for you.</p>
@@ -48,7 +48,7 @@
             
             
             <!-- Contact Form -->
-            <div class="w-1/2 pl-8">
+            <div class="md:w-1/2 mt-8 md:mt-0 pl-8">
                 <div class="bg-white shadow-lg rounded-lg h-full overflow-hidden">
                     <div class="px-6 py-8">
                         <h2 class="text-3xl font-semibold mb-4 text-center">Send Us a Message</h2>
@@ -62,10 +62,7 @@
                                 <label for="email" class="block text-gray-700 font-semibold mb-2">Email:</label>
                                 <input type="email" id="email" name="email" class="bg-gray-100 focus:outline-none focus:bg-white border-b-2 border-gray-400 py-2 px-4 w-full" placeholder="Enter your email">
                             </div>
-                            <div class="mb-4">
-                                <label for="subject" class="block text-gray-700 font-semibold mb-2">Subject:</label>
-                                <input type="subject" id="subject" name="subject" class="bg-gray-100 focus:outline-none focus:bg-white border-b-2 border-gray-400 py-2 px-4 w-full" placeholder="Enter your subject">
-                            </div>
+                            
                             <div class="mb-4">
                                 <label for="message" class="block text-gray-700 font-semibold mb-2">Message:</label>
                                 <textarea id="message" name="message" class="bg-gray-100 focus:outline-none focus:bg-white border-b-2 border-gray-400 py-2 px-4 w-full" rows="4" placeholder="Enter your message"></textarea>
