--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -10,6 +10,12 @@ Destinations
   rel="stylesheet"
   href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"
 />
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 {% block content %}
 
 <body class="bg-gray-100">
@@ -20,7 +26,7 @@ Destinations
     > -->
       <!-- Product images -->
       <div class="flex justify-center bg-white p-6 rounded-lg shadow-md ">
-        <div class="flex justify-center items-center mb-6 border w-3">
+        <div class="flex justify-center items-center mb-6 border w-3/5">
           {% if product.image %}
           <img
             src="{{ product.image.url }}"
@@ -39,7 +45,7 @@ Destinations
   
 
     <!-- </div> -->
-    <div class="flex space-x-5 justify-between ">
+    <div class="flex flex-col space-y-5 md:flex-row md:space-x-5 md:space-y-0 justify-between ">
       <div class="bg-gray-200 p-5 flex flex-col flex-1 space-y-5 rounded-md">
         <h1 class = 'text-2xl'>Package Details</h1>
         <p class="text-gray-700 mb-2">{{ product.description }}</p>
@@ -64,7 +70,7 @@ Destinations
 
       </div>
       <!-- Check Availability -->
-      <div class="flex flex-col justify-between mt-6 md:mt-0 bg-white p-5 rounded-md bg-gray-200">
+      <div class="flex flex-col justify-between w-fit md:w-1/2 mt-6 md:mt-0 bg-white p-5 rounded-md bg-gray-200">
         
         <form
           action="{% url 'check_availability' product.pid %}"
@@ -87,8 +93,8 @@ Destinations
               name="startDate"
               class="rounded-l-lg p-2 border border-gray-200 bg-white w-full"
               required
-              onfocus="this.min=new Date().toISOString().split('T')[0]"
-            />
+              onfocus="setMinDate()"
+          />
           </div>
           <div class="mb-4">
             <label
@@ -137,6 +143,16 @@ Destinations
     
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script>
+    function setMinDate() {
+        var today = new Date();
+        var tomorrow = new Date(today);
+        tomorrow.setDate(today.getDate() + 1);
+
+        var minDateString = tomorrow.toISOString().split('T')[0];
+        document.getElementById('startDate').setAttribute('min', minDateString);
+    }
+</script>
   <script>
     function checkAvailability(form) {
       event.preventDefault(); // Prevent the form from submitting immediately
