--- a/TravelBooking/theme/templates/settings.html
+++ b/TravelBooking/theme/templates/settings.html
@@ -9,20 +9,19 @@
 {% block content %}
 <body class="bg-gray-100">
 
-<div class="flex h-screen">
+<div class="flex flex-col md:flex-row h-screen">
     <!-- Sidebar -->
-    <nav class="w-1/4 bg-gray-700 text-gray-100 py-10 px-4">
+    <nav class="md:w-1/4 bg-gray-700 text-gray-100 py-10 px-4">
         <ul class="space-y-4">
             <li><a href="{% url 'settings' %}" class="block px-4 py-2 hover:bg-gray-700 hover:text-gray-300">Profile</a></li>
             <li><a href="{% url 'change_password' %}" class="block px-4 py-2 hover:bg-gray-700 hover:text-gray-300">Change Password</a></li>
             <li><a href="{% url 'delete_account' %}" class="block px-4 py-2 hover:bg-gray-700 hover:text-gray-300">Delete Account</a></li>
             <li><a href="{% url 'logout' %}" class="block px-4 py-2 hover:bg-gray-700 hover:text-gray-300">Logout</a></li>
-
         </ul>
     </nav>
     
     <!-- Profile Content -->
-   <div class="flex-1 p-10">
+   <div class="md:flex-1 md:p-10">
     <div class="bg-white rounded-lg shadow-md p-6">
         <h2 class="text-xl font-semibold mb-4">Profile Information</h2>
         <div class="space-y-3">
@@ -45,8 +44,6 @@
         <a href="{% url 'edit_profile' %}" class="block">Edit Profile</a>
     </div>
     
-    
-
 </div>
 
 </div>
@@ -60,6 +57,3 @@
 </script>
 {% endfor %}
 {% endblock %}
-
-
-
