--- a/TravelBooking/theme/templates/index.html
+++ b/TravelBooking/theme/templates/index.html
@@ -17,7 +17,7 @@
 {% block content %}
 
 <!-- Search Bar Section -->
-<div class="bg-cover bg-center bg-blue-500 text-white py-24" style="background-image: url('/static/images/bg1.jpeg');background-position: top;">
+<div class="bg-cover bg-center text-white py-24" style="background-image: url('/static/images/bg1.jpeg');background-position: top;">
     <div class="container mx-auto px-6 text-center">
         <h1 class="text-6xl font-bold">Welcome to Adven</h1>
         <p class="mt-4 text-2xl ">Experience Nepal with us!</p>
