--- a/TravelBooking/theme/templates/contact.html
+++ b/TravelBooking/theme/templates/contact.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <!-- Top Section - Contact Banner -->
-<div class="bg-cover bg-center bg-blue-500 text-white py-24" style="background-image: url('/static/images/bg1.jpeg');background-position: top;">
+<div class="bg-cover bg-center bg-gray-100 text-white py-24" style="background-image: url('/static/images/bg1.jpeg');background-position: top;">
     <div class="container mx-auto px-6 text-center">
         <h1 class="text-6xl font-bold">Contact Us</h1>
         <p class="mt-4 text-2xl">Feel free to reach out to us for any inquiries!</p>
